--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1344,6 +1344,258 @@ namespace RN3.Wpf.Common.Accessor
 
 ---
 
+## SQL てく
+
+範囲で連番生成
+
+``` sql
+SELECT * FROM (
+    SELECT TOP (1000)
+        ROW_NUMBER() OVER (ORDER BY object_id) AS SeqNo,
+        ROW_NUMBER() OVER (ORDER BY object_id)+6 AS SeqNoTo
+    FROM sys.all_objects
+    ORDER BY SeqNo
+) AS rn_q
+WHERE rn_q.SeqNo%6 = 0
+
+
+
+SELECT * FROM (
+    SELECT   TOP (1000)
+             ROW_NUMBER() OVER (ORDER BY object_id)-1 AS SeqNo,
+             ROW_NUMBER() OVER (ORDER BY object_id)+3 AS SeqNoTo
+    FROM     sys.all_objects
+    ORDER BY SeqNo
+) AS rn_q
+WHERE rn_q.SeqNo%5 = 0
+-- 0    4
+-- 5    9
+-- 10    14
+-- 15    19
+-- 20    24
+-- 25    29
+-- 30    34
+```
+
+[SQLServerで指定した文字で文字列を分割する](https://it-engineer-info.com/database/divide-string)  
+
+``` sql
+DECLARE    @separator   VARCHAR(MAX) = ','
+DECLARE    @target_str  VARCHAR(MAX)='123,45678'
+ 
+--文字列を「-」で前後に分割する
+SELECT
+     SUBSTRING( @target_str, 1, CHARINDEX( @separator, @target_str ) - 1 ) AS before
+    ,SUBSTRING( @target_str, CHARINDEX( @separator, @target_str ) + 1, LEN( @target_str ) - CHARINDEX( @separator, @target_str )) AS after
+```
+
+（※SQL Server 2016以降では「STRING_SPLIT」という関数が実装されています。)
+
+[【T-SQL】文字列を分割して〇番目の値を取得したい場合 (string_split)](http://ubisnews.blogspot.com/2018/07/t-sql-stringsplit.html)  
+T-SQL(SQLSERVER)で文字列を分割したいと思ったところ、調べるとstring_split関数というものが利用できるとわかりました。
+ただ分割した文字列は表になり分割後の文字をサクッと取り出す方法が探しても見つからなかったのでメモしておこうと思います。
+例えば、abc,def,ghiという文字列をカンマ(,)で分割して2番目の値(ここではdef)
+を取り出したい場合
+
+``` sql
+DECLARE @Val AS VARCHAR(10) --取得する値を格納する変数
+
+SELECT @Val = (
+SELECT A.value FROM
+(
+ SELECT
+   ROW_NUMBER() OVER (ORDER BY (SELECT 1)) AS "Id",
+   value
+ FROM
+   STRING_SPLIT(N'abc,def,ghi', N',')
+) A
+WHERE A.Id = 1
+)
+
+SELECT @Val
+
+```
+
+
+カーソル処理基本
+[SELECT した結果をカーソルを使用してループ処理をする方法](https://www.projectgroup.info/tips/SQLServer/SQL/SQL000028.html)  
+
+``` sql
+--カーソルの値を取得する変数宣言
+DECLARE @W_COL1 varchar(50)
+DECLARE @W_COL2 decimal(18,0)
+
+--カーソル定義
+DECLARE CUR_AAA CURSOR FOR
+    SELECT COL1
+          ,COL2
+    FROM   TAB_A
+    WHERE  TAB_A.COL1 = ＜条件値＞
+
+--カーソルオープン
+OPEN CUR_AAA;
+
+--最初の1行目を取得して変数へ値をセット
+FETCH NEXT FROM CUR_AAA
+INTO @W_COL1,@W_COL2;
+
+--データの行数分ループ処理を実行する
+WHILE @@FETCH_STATUS = 0
+BEGIN
+
+    -- ========= ループ内の実際の処理 ここから===
+    INSERT INTO TAB_B
+    VALUES (
+        @W_COL1
+       ,@W_COL2
+    )
+    -- ========= ループ内の実際の処理 ここまで===
+
+    --次の行のデータを取得して変数へ値をセット
+    FETCH NEXT FROM CUR_AAA
+    INTO @W_COL1,@W_COL2;
+END
+
+--カーソルを閉じる
+CLOSE CUR_AAA;
+DEALLOCATE CUR_AAA;
+```
+
+[[SQLServer]テーブルをまるっとコピーする方法](https://ameblo.jp/nature3298type-s/entry-10313449987.html)
+
+``` sql
+SELECT * INTO <コピー先テーブル名> FROM <コピー元テーブル名>
+```
+
+`<コピー元テーブル名>`は名前の指定だけあればよい。
+あらかじめテーブルを作成する必要は無し。
+実行するとテーブルもSQLServerが自動でテーブルも作成してくれます。
+※注：ただし、テーブルは規定の領域（なにも設定してなければPrimary）に作られるので、ファイルグループ管理は要注意。
+
+
+``` SQL
+-- 改良前
+UPDATE [Base]
+SET 
+	[MemberName] = REPLACE([Base].[MemberName],LEFT([Base].[MemberName],LEN([SQ].[Myouji])),[CT].[Name]),
+	[MemberKana] = REPLACE([Base].[MemberKana],LEFT([Base].[MemberKana],LEN([SQ].[MyoujiKana])),[CT].[Kana]),
+	SearchKeyName = REPLACE([Base].[SearchKeyName],LEFT([Base].SearchKeyName,LEN([SQ].[Myouji])),[CT].[Name]),
+	SearchKeyKana = REPLACE([Base].[SearchKeyKana],LEFT([Base].[SearchKeyKana],LEN([SQ].[MyoujiKana])),[CT].[Kana]),
+	SearchKeyNameIdentification = REPLACE([Base].SearchKeyNameIdentification,LEFT([Base].SearchKeyNameIdentification,LEN(myouji)),[CT].[Name])
+FROM
+	TMc_Member AS [Base]
+	JOIN 
+	(
+		SELECT 
+			CASE 
+				WHEN REPLACE(SUBSTRING([MemberName], 1, CHARINDEX(' ', [MemberName] )),' ','') <> '' 
+				THEN REPLACE(SUBSTRING([MemberName], 1, CHARINDEX(' ', [MemberName] )),' ','')
+				ELSE [MemberName]
+			END AS [Myouji],
+			CASE 
+				WHEN REPLACE(SUBSTRING([MemberKana], 1, CHARINDEX(' ', [MemberKana] )),' ','') <> '' 
+				THEN REPLACE(SUBSTRING([MemberKana], 1, CHARINDEX(' ', [MemberKana] )),' ','')
+				ELSE [MemberKana]
+			END AS [MyoujiKana],
+			*
+		FROM TMc_Member
+	) AS [SQ]
+	ON [Base].MemberCD = [SQ].MemberCD
+	AND [Base].[HistoryNo] = [SQ].[HistoryNo]
+	JOIN [ConversionTable] AS [CT]
+	ON RIGHT(UNICODE(LEFT([SQ].[myouji],1)),3) BETWEEN [CT].[From] AND [CT].[To]
+
+
+-- 改良後2
+UPDATE [Base]
+SET 
+	[MemberName] = REPLACE([Base].[MemberName],LEFT([Base].[MemberName],LEN([Base].[Myouji])),[CT].[Name]),
+	[MemberKana] = REPLACE([Base].[MemberKana],LEFT([Base].[MemberKana],LEN([Base].[MyoujiKana])),[CT].[Kana]),
+	SearchKeyName = REPLACE([Base].[SearchKeyName],LEFT([Base].SearchKeyName,LEN([Base].[Myouji])),[CT].[Name]),
+	SearchKeyKana = REPLACE([Base].[SearchKeyKana],LEFT([Base].[SearchKeyKana],LEN([Base].[MyoujiKana])),[CT].[Kana]),
+	SearchKeyNameIdentification = REPLACE([Base].SearchKeyNameIdentification,LEFT([Base].SearchKeyNameIdentification,LEN(myouji)),[CT].[Name])
+FROM
+	(
+		SELECT 
+			CASE 
+				WHEN REPLACE(SUBSTRING([MemberName], 1, CHARINDEX(' ', [MemberName] )),' ','') <> '' 
+				THEN REPLACE(SUBSTRING([MemberName], 1, CHARINDEX(' ', [MemberName] )),' ','')
+				ELSE [MemberName]
+			END AS [Myouji],
+			CASE 
+				WHEN REPLACE(SUBSTRING([MemberKana], 1, CHARINDEX(' ', [MemberKana] )),' ','') <> '' 
+				THEN REPLACE(SUBSTRING([MemberKana], 1, CHARINDEX(' ', [MemberKana] )),' ','')
+				ELSE [MemberKana]
+			END AS [MyoujiKana],
+			*
+		FROM TMc_Member
+	) AS [Base]
+	JOIN [ConversionTable] AS [CT]
+	ON RIGHT(UNICODE(LEFT([Base].[myouji],1)),3) BETWEEN [CT].[From] AND [CT].[To]
+```
+
+
+``` txt
+
+
+select * from TMc_Customer
+select * from TMc_CustomerAddress
+select * from TMc_Member
+select * from TRe_Reservation
+select * from TRe_ReservationPlayer
+
+
+
+
+--文字列を「-」で前後に分割する
+SELECT
+     CASE WHEN LEN(ISNULL(CustomerName,0)) > 1 THEN SUBSTRING(CustomerName, 1, CHARINDEX(' ', CustomerName )  ) ELSE CustomerName END AS before
+    -- ,SUBSTRING( CustomerName, CHARINDEX( @separator, CustomerName ) + 1, LEN( @target_str ) - CHARINDEX( @separator, @target_str )) AS after
+FROM
+	TMc_Customer
+
+	--文字列を「-」で前後に分割する
+SELECT
+	CHARINDEX(' ', CustomerName ),
+     SUBSTRING(CustomerName, 1, CASE WHEN CHARINDEX(' ', CustomerName ) > 0 THEN CHARINDEX(' ', CustomerName ) -1 ELSE 0 END) AS before
+    -- ,SUBSTRING( CustomerName, CHARINDEX( @separator, CustomerName ) + 1, LEN( @target_str ) - CHARINDEX( @separator, @target_str )) AS after
+FROM
+	TMc_Customer
+
+
+
+select * from ConversionTable
+where [Name] = '鶴居'
+
+
+select (UNICODE('井')),(UNICODE('五'))
+select RIGHT(UNICODE('井'),3),RIGHT(UNICODE('五'),3)
+
+
+
+
+
+DECLARE @Count INT = 100;
+SELECT   TOP (@Count)
+         ROW_NUMBER() OVER (ORDER BY object_id)-1 AS SeqNo
+FROM     sys.all_objects
+ORDER BY SeqNo;
+
+
+
+SELECT * FROM (
+	SELECT   TOP (1000)
+			 ROW_NUMBER() OVER (ORDER BY object_id)-1 AS SeqNo,
+			 ROW_NUMBER() OVER (ORDER BY object_id)+3 AS SeqNoTo
+	FROM     sys.all_objects
+	ORDER BY SeqNo
+) AS rn_q
+WHERE rn_q.SeqNo%5 = 0
+
+```
+
+---
+
 ## 雑記
 
 トーレス・デル・パイネ国立公園
