sqlまとめ signalrまとめ

--- a/Programming/プログラミングに関するメモ.md
+++ b/Programming/プログラミングに関するメモ.md
@@ -1,6 +1,6 @@
 # プログラミングに関するメモ
 
-## staticクラスでthisが使えないのはなぜか？
+## static
 
 ### そもそもstaticって結局何なのか？  
 
@@ -212,3 +212,18 @@ https://teratail.com/questions/70213
 https://qiita.com/yutorisan/items/d28386f168f2f3ab166d
 
 interfaceはcan doの関係  
+
+---
+
+## Windowsデスクトップ向け業務アプリ開発には何を採用すべきか？
+
+[Windowsデスクトップ向け業務アプリ開発には何を採用すべきか？](https://qiita.com/sengoku/items/fb4948e0d2746e3cc26f)  
+
+- UWPで要件を満たせるのであれば[UWP]  
+- Webに慣れた開発者が多ければ[Electron]か[React Native]  
+- iOS/Android向けアプリも一緒に開発するなら[Xamarin]か[React Native]  
+- そうでなければ[WPF]一択  
+
+WPFを選択した場合、.NET Framework 4.7/4.8にするか、.NET Core 3にするのかも選ばなければいけません。  
+将来的なサポートやテストしやすさを考えれば、.NET Core 3から.NET 5へと続く道へ。  
+リリースが間近か、現在ある資産をどうしても手放せないのであれば、.NET Framework 4.7/4.8でしょうか。  
