sqlまとめ signalRまとめ

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -956,3 +956,13 @@ ItemsPanel
     </Style>
 ```
 
+
+
+これも縁かねぇ。
+いよいよ6月転職活動開始が現実的になってきたな。
+そういう指示をしていた社長が2022/05/24に死んでしまったので、いよいよ縁も切れたかなって。
+会社が空中分解の呈を見せ始めたので駄目かなって。
+
+しかし、昨日は朝からぶっこんで来たんだな。
+6月まで当然のように持つと思ったけど、意外と持たなかったな。
+
