--allow-empty-message

--- a/DB・SQL/データベースメモ.md
+++ b/DB・SQL/データベースメモ.md
@@ -18,19 +18,20 @@ A 1対多 中間 多対1 B
 [うさぎでもわかる](https://www.momoyama-usagi.com/entry/info-database-seikika)  
 [[DataBase]で行う正規化の手順についてわかりやすく解説します](https://rikulogger.com/db/nomalization/)
 
-**正規化**  
 データとかを使いやすいように整理したり変形したりすること  
 正規化の目的は冗長性の排除することで更新時異状を回避し、データベースの一貫性を確保すること。  
 DB上で扱うデータの重複を排除し、「矛盾」の発生を「設計レベル」で防ぐこと。  
 正規化はパフォーマンス向上のために行うわけではない。  
 
-**第1正規形**  
+### 第1正規形
+
 →同一行内に置ける重複の排除  
 ポイント：レコードの繰り返し項目を別のレコードへと分割する  
 
 パッと見DBに格納できる状態ではあるが、重複しまくっているので使い物にはならない状態。  
 
-**第2正規形**  
+### 第2正規形
+
 →部分関数従属の排除。  
 複合主キーの部分キーによって一意に定まる属性を別表に移したもの。  
 主キーに部分従属している属性を分離したもの。  
@@ -40,7 +41,8 @@ DB上で扱うデータの重複を排除し、「矛盾」の発生を「設計
 逆にこの項目はこの主キーだけで特定できるよね？  
 ってのを上げて、それぞれのテーブルに分離した状態。  
 
-**第3正規形**  
+### 第3正規形
+
 →推移的関数従属の排除。  
 主キー又は主キーの一部に推移的に関数従属する属性を別表に移します。  
 どのテーブルであってもすべての属性が主キーに対して完全従属であるテーブルにします。  
@@ -112,8 +114,10 @@ Teelaか何かでやったことがあるような気がしたが、まとめて
 
 <https://amg-solution.jp/blog/8980>  
 
-surrogate : 代理
-代理キー。ウチで言う一番左のid列のこと。ソートの為にあるようなやつ。  
+surrogate : 代理  
+
+代理キー。  
+ウチで言う一番左のid列のこと。ソートの為にあるようなやつ。  
 それ単体では意味を持たないが、一意であるキー。  
 主キーを設定すること。  
 
