・base64まとめ ・応用まとめなおし

--- a/BasicInformation/午前/1.テクノロジ系/12.システム開発技術.md
+++ b/BasicInformation/午前/1.テクノロジ系/12.システム開発技術.md
@@ -4,6 +4,21 @@
 
 ## ソフトウェア要件定義
 
+### UML(Unified Modeling Language)
+
+オブジェクト指向開発で用いられる標準表記法群で、オブジェクト間の関連や動作・構成を表現する13種の図表から構成されています。  
+UML2.0の13の図法は表現する対象によって構造図，振る舞い図に分類することができます。  
+
+#### 構造図
+
+システムの静的な構造をモデルで表現する。  
+クラス図，コンポジット構造図，コンポーネント図，配置図，オブジェクト図，パッケージ図  
+
+#### 振る舞い図
+
+システムの振る舞いをモデルで表現する。  
+アクティビティ図，ユースケース図，シーケンス図，インタラクション概念図，コラボレーション図，タイミング図，ステートマシン図  
+
 ### アクティビティ図
 
 ビジネスプロセスの流れやプログラムの制御フローのような一連の手続きを可視化できる図です。  
