--- a/BasicInformation/午前/3.ストラテジ系/1.システム戦略.md
+++ b/BasicInformation/午前/3.ストラテジ系/1.システム戦略.md
@@ -4,6 +4,38 @@
 
 ## 情報システム戦略
 
+### EA(エンタープライズアーキテクチャ)
+
+組織の全体最適化の観点より、業務及びシステム双方の改革を実践するために、業務及びシステムを統一的な手法でモデル化し、改善することを目的とした設計・管理方法です。  
+エンタープライズアーキテクチャでは、モデリングにより業務とシステムの現状（As-Is）とあるべき姿 （To-Be）を整理し、あるべき姿（To-Be）の実現を目指して業務およびシステムの改善を図ります。  
+大企業や政府機関などといった巨大な組織(enterprise)の業務手順・情報システムの標準化、および組織の最適化を進めることによる運営の効率化を図るための方法論として活用されます。  
+
+[2]  
+EA(エンタープライズアーキテクチャ)における理想モデル（To-Be）は、対象の理想的な将来像・目標を表現するモデルです。  
+EAでは「政策・業務体系」「データ体系」「適用処理体系」「技術体系」の4つの体系で、それぞれ、最初に現状を分析した現状モデル(As-Is)を整理し、目標とする理想モデル(To-Be)を描き、最後に現状と理想目標を比較した現実的な次期モデルを作成します。  
+
+![!](https://www.ap-siken.com/kakomon/29_aki/img/61.gif)  
+
+#### ビジネス・アーキテクチャ（政策・業務体系）
+
+政策・業務の内容、実施主体、業務フロー等について、 共通化・合理化など実現すべき姿を体系的に示したもの。  
+構成要素…業務説明書、機能構成図、機能情報関連図、業務フローなど  
+
+#### データ・アーキテクチャ（データ体系）
+
+各業務・システムにおいて利用される情報すなわちシステム上のデータの内容、 各情報（データ）間の関連性を体系的に示したもの。  
+構成要素…情報体系クラス図、エンティティ・リレーション図、データ定義表など  
+
+#### アプリケーション・アーキテクチャ（処理体系）
+
+業務処理に最適な情報システムの形態を体系的に示したもの。  
+構成要素…情報システム関連図、情報システム機能構成図など  
+
+#### テクノロジ・アーキテクチャ（技術体系）
+
+実際にシステムを構築する際に利用する諸々の技術的構成要素 （ハード・ソフト・ ネットワーク等）を体系的に示したもの。  
+構成要素…ネットワーク構成図、ソフトウェア構成図、ハードウェア構成図など  
+
 ### IT投資評価
 
 #### 事前評価
@@ -11,15 +43,26 @@
 実施前の投資案件に対して、内部の了解を得るとともに他のプロジェクトとの整合などの全体最適の観点から評価を行う。  
 投資実行の可否を判断するための情報を提供する役割を担う。  
 
+→  
+投資目的に基づいた効果目標を設定し，実施可否判断に必要な情報を上位マネジメントに提供する。等  
+「効果目標の設定」は計画段階で行う。  
+
 #### 中間評価
 
 実施中の投資案件の実績をモニタリングし評価する。  
 実施計画の軌道修正を判断するための情報を提供する役割を担う。  
 
+→  
+事前に設定した効果目標の達成状況を評価し，必要に応じて目標を達成するための改善策を検討する。  
+計画と実績との差異及び原因を詳細に分析し，投資額や効果目標の変更が必要かどうかを判断する。等  
+
 #### 事後評価
 
 実施済の投資案件が事前に設計した目的・効果を達成しているかどうかを評価する。  
 IT投資の実施効果を上位マネジメントに報告するとともに、終結以後の改善策について判断するための情報を提供する役割を担う。  
+
+→  
+投資効果の実現時期と評価に必要なデータ収集方法を事前に計画し，その時期に合わせて評価を行う。等  
 
 #### 平成28年春期　問61
 
@@ -37,41 +80,210 @@ IT投資評価を，個別プロジェクトの計画，実施，完了に応じ
 投資目的に基づいた効果目標を設定し，実施可否判断に必要な情報を上位マネジメントに提供する。
 正しい。「効果目標の設定」は計画段階で行うことや、実施可否の判断の前段階で行われる評価なので、事前評価に該当します。
 
+### プログラムマネジメント
+
+同時並行的に進められている複数のプロジェクトを組合せ、それらの相互関係を最適化することで、全体として使命をより良く達成するように導く活動です。  
+ここで言う「プログラム」とは、相互に関連する複数のプロジェクトを要素としてもつ集合体を指します。  
+PMBOKガイド第5版では「プログラムの戦略目標と成果価値を達成するためにプログラム全体の調和を保ちつつ一元的にマネジメントすること」と定義されています。  
+
+### オープンAPI
+
+ソフトウェアやアプリケーションが持つ機能やデータを呼び出すための接続仕様・仕組み(API)を、外部の事業者に開放することです。  
+フィンテックやオープンイノベーションを加速させる手段として期待されています。  
+
+特に金融機関においては、2017年5月の改正銀行法の成立により、金融機関が外部事業者との安全なデータ連携を行うためのオープンAPIが、法律上の努力義務になるなど重要度が増しています。  
+金融機関以外の事業者が、ユーザのデータを扱えるようになることで、金融機関とは関係のないアプリから残高の確認や振込が行えたり、簡単に家計簿をつけたりなど、より便利で高度な金融サービスの展開が期待されています。  
+
+※接続仕様や仕組みが外部企業などに公開されている他社のアプリケーションソフトウェアを呼び出して，適宜利用し，データ連携を行う。  
+
+![a](https://www.ap-siken.com/kakomon/03_haru/img/62.gif)  
+
+### ROI(Return on Investment，投下資本利益率)
+
+投資額に対してどれだけ経常利益を生み出しているかを見る指標。  
+
+`ROI＝利益／投資額`  
+
+この値が高いほど稼ぐ力が強いということになります。  
+
+問題文中に，割引率は考慮しなくてもよいものとする。  
+とあった場合、分子を全部足して投資額で割るだけで良い。  
+
+### EVA(Economic Value Added)
+
+経済的付加価値のこと。企業が一定期間に生み出した経済的価値を評価する指標のひとつです。  
+`EVA＝税引後営業利益－投下資本×資本コスト`  
+
+### IRR(Internal Rate of Return)
+
+内部収益率。  
+投資により将来得られるキャッシュフローの現在価値と投資額の現在価値とが等しくなる割引率(内部収益率)を求め、投資により見込まれる内部収益率が本来得るべき利回りより大きいかどうかで投資の可否を判断する手法です。  
+
+### NPV(Net Present Value)
+
+正味現在価値。  
+投資により得られるキャッシュフローを現在価値に換算し、そこから投資額を引いた正味現在価値を求め、その額が0(ゼロ)を上回っているかどうかで投資の可否を判断する手法です。  
+
+### 正味現在価値法
+
+一定期間のキャッシュフローを、時間的変化に割引率を設定して現在価値に換算した上で、キャッシュフローの合計値を求め、その大小で評価する手法です。  
+
+例えば割引率5％とすると、1年後に受け取る100万円は「100万円÷1.05」、2年後に受け取る100万円は「100万円÷1.052」、n年後に受け取る100万円は「100万円÷1.05n」という具合に現在価値に換算します。  
+つまり、同じ100万円でも将来に受け取るほどその価値を低く見積もります。  
+
+#### 平成31年春期　問64
+
+投資効果を正味現在価値法で評価するとき，最も投資効果が大きい(又は損失が小さい)シナリオはどれか。ここで，期間は3年間，割引率は5%とし，各シナリオのキャッシュフローは表のとおりとする。  
+
+![a](https://www.ap-siken.com/kakomon/31_haru/img/64.gif)  
+
+本来でしたらシナリオごとに具体的な計算を行うのですが、この計算はなかなか骨の折れる作業です。  
+そこで、本問では各シナリオの回収額の合計が同じになっています。上記の理屈を踏まえると、回収合計額が同じならば、より早く大きな金額を受け取れた方が現在価値の合計が高くなるはずです。
+したがって、3つのシナリオを現在価値が高くなる順に並べると、1年目の割合が高いB、3年間に平準化されているC、最終年の割合が多いAの順になります。
+
+最後に、現在価値が投資額を上回っているかどうかについても検討しなければなりません。「現在価値＜投資額」ならば、投資価値がないと判断されるからです。よって、シナリオBの現在価値を概算で求めます。
+
+　120÷1.05＋80÷1.052＋40÷1.053
+≒120÷1.05＋80÷1.1＋40÷1.15
+≒114.2＋72.7＋34.7
+＝221.6(万円)
+
+少額ではありますが投資額の220万円を上回るので、投資をしない案よりもシナリオBの方が有利と判断されます。
+
+### TCO(Total Cost of Ownership)
+
+ある設備・システムなどに関する、取得から廃棄までに費用の総額を表します。  
+TCOは、初期投資額であるイニシャルコストと、維持管理費用であるランニングコストに大別できます。  
+
+#### イニシャルコストの例
+
+ハードウェア購入・設置費用、パッケージソフトの購入費用・開発費、初期教育費など  
+
+#### ランニングコストの例
+
+保守・サポート契約費、ライセンス料、運用人件費、消耗品費など  
+
+### IT投資ポートフォリオ
+
+情報化投資において，リスクや投資価値の類似性でカテゴリ分けし，最適な資源配分を行う際に用いる手法。  
+ポートフォリオの考え方を情報化投資戦略に応用したものです。  
+**IT投資をその目的やリスクの特性ごとにカテゴライズし、**そのカテゴリごとに投資割合を管理することで、限りある経営資源を有効に配分することを目的とします。  
+
+経済産業省が提唱するモデルでは、IT投資をその目的にもとづき「戦略目標達成型」「業務効率化型」「インフラ構築型」の3つのカテゴリに分類した後、「事業への貢献度」や「活用度」「実現可能性」や「コスト」などの評価軸を用いて事業における位置付けを可視化します。  
+
+IT投資ポートフォリオの投資対象カテゴリを、戦略、情報、トランザクション、インフラの4つに分類して考えるのは、MITスローン情報システム研究センターが提唱するモデル(MITモデル)です。  
+以下の各カテゴリの定義は、経済産業省「業績評価参照モデル（PRM）を用いたITポートフォリオモデル 活用ガイド」からの引用です。  
+
+#### 戦略
+
+市場における競争優位やポジショニングを獲得することを目的とした投資。具体例としては、導入当初のATM等がこのカテゴリーに該当する
+
+#### 情報
+
+より質の高い管理を行うことを目的とした、会計、マネジメント管理、レポーティング、コミュニケーション、分析等を支援するための情報提供に関連する投資
+
+#### トランザクション
+
+注文処理等のルーチン化された業務のコスト削減や処理効率向上を目的とした投資
+
+#### インフラ
+
+複数アプリケーションによって共有される基盤部分を提供するための投資。PCやネットワーク、共有データベース等が該当する
+
 ---
 
-## EA(エンタープライズアーキテクチャ)
+## 全体最適化計画
 
-組織の全体最適化の観点より、業務及びシステム双方の改革を実践するために、業務及びシステムを統一的な手法でモデル化し、改善することを目的とした、設計・管理手法です。  
-
-組織の全体最適化の観点より、業務及びシステム双方の改革を実践するために、業務及びシステムを統一的な手法でモデル化し、改善することを目的とした設計・管理方法です。  
-エンタープライズアーキテクチャでは、モデリングにより業務とシステムの現状（As-Is）とあるべき姿 （To-Be）を整理し、あるべき姿（To-Be）の実現を目指して業務およびシステムの改善を図ります。  
-大企業や政府機関などといった巨大な組織(enterprise)の業務手順・情報システムの標準化、および組織の最適化を進めることによる運営の効率化を図るための方法論として活用されます。  
+[1]  
+全体最適化計画とは、組織内の個々のシステムが有機的に関連し、相互の整合性を保ちながら効率的かつ効果的に目的を達成するように、**組織体全体の情報システムをあるべき姿**に改善していくための計画です。
 
 [2]  
-EA(エンタープライズアーキテクチャ)における理想モデル（To-Be）は、対象の理想的な将来像・目標を表現するモデルです。  
-EAでは「政策・業務体系」「データ体系」「適用処理体系」「技術体系」の4つの体系で、それぞれ、最初に現状を分析した現状モデル(As-Is)を整理し、目標とする理想モデル(To-Be)を描き、最後に現状と理想目標を比較した現実的な次期モデルを作成します。  
+全体最適化計画とは、組織内の個々のシステムが有機的に関連し、相互の整合性を保ちながら効率的かつ効果的に目的を達成するように、組織体全体の情報システムをあるべき姿に改善していくための計画です。  
+情報戦略では、情報化投資の原則や全体最適化の方針・目標を明確にし、経営方針や中長期計画との整合性をもった全体最適化計画を策定するとされています。  
 
-![!](https://www.ap-siken.com/kakomon/29_aki/img/61.gif)  
+### 情報戦略
 
-### ビジネス・アーキテクチャ（政策・業務体系）
+[1]
+経営戦略の下に策定され、経営目標の達成に寄与するものでなければなりません。  
+したがって立案時には、経営事業戦略、経営事業目標、中長期構想との整合性をとることが求められます。  
+システム管理基準でも「情報システム全体の最適化目標を経営戦略に基づいて設定すること。」や「情報化投資計画は、経営戦略との整合性を考慮して策定すること。」などのように経営計画との整合性の重視を強調する管理項目が挙げられています。  
 
-政策・業務の内容、実施主体、業務フロー等について、 共通化・合理化など実現すべき姿を体系的に示したもの。  
-構成要素…業務説明書、機能構成図、機能情報関連図、業務フローなど  
+[2]
+情報化投資の原則や全体最適化の方針・目標を明確にし、経営方針や中長期計画との整合性をもった全体最適化計画を策定するとされています。
 
-### データ・アーキテクチャ（データ体系）
+"システム管理基準"によれば，情報戦略策定段階の成果物はどれか。
+→
+**経営戦略に基づいて**組織体全体で整合性及び一貫性を確保した情報化を推進するために，方針及び目標に基づいて策定する全体最適化計画
 
-各業務・システムにおいて利用される情報すなわちシステム上のデータの内容、 各情報（データ）間の関連性を体系的に示したもの。  
-構成要素…情報体系クラス図、エンティティ・リレーション図、データ定義表など  
+### システム管理基準
 
-### アプリケーション・アーキテクチャ（処理体系）
+情報戦略を立案し、効果的な情報システム投資とリスクを低減するためのコントロールを適切に整備・運用するための事項を経済産業省がとりまとめたものです。  
+全287項目で構成されていて、それぞれの項目は「情報戦略」「企画業務」「開発業務」「運用業務」「保守業務」「共通業務」の6つの業務別に分類されています。全体最適化は「情報戦略」の小分類に位置づけられています。  
 
-業務処理に最適な情報システムの形態を体系的に示したもの。  
-構成要素…情報システム関連図、情報システム機能構成図など  
+「全体最適化の方針・目標」を設定する際の留意事項として次の6つが挙げられています。
 
-### テクノロジ・アーキテクチャ（技術体系）
+1. ITガバナンスの方針を明確にすること。  
+2. 情報化投資及び情報化構想の決定における原則を定めること。  
+3. 情報システム全体の最適化目標を経営戦略に基づいて設定すること。  
+4. 組織体全体の情報システムのあるべき姿を明確にすること。  
+5. システム化によって生ずる組織及び業務の変更の方針を明確にすること。  
+6. 情報セキュリティ基本方針を明確にすること。  
 
-実際にシステムを構築する際に利用する諸々の技術的構成要素 （ハード・ソフト・ ネットワーク等）を体系的に示したもの。  
-構成要素…ネットワーク構成図、ソフトウェア構成図、ハードウェア構成図など  
+**全体最適化**  
+組織体が主体的に経営戦略に沿って効果的な情報システム戦略を立案し、全社的に情報システム開発を推進する体制を整えるために実施される作業で、以下の4つのカテゴリに大別されています。
+
+全体最適化の方針・目標(6項目)
+全体最適化計画の承認(3項目)
+全体最適化計画の策定(7項目)
+全体最適化計画の運用(1項目)
+
+"システム管理基準"によれば，"全体最適化"に含まれる作業はどれか。
+
+委託先を含む開発体制の策定
+企画業務で実施する作業です。
+
+開発スケジュールの策定
+企画業務で実施する作業です。
+
+個別システムのハードウェアの導入スケジュールの策定
+開発業務で実施する作業です。
+
+情報システム基盤の整備計画の策定
+正しい。全体最適化で実施する作業です。
+
+### 情報化投資計画
+
+情報化投資計画は経営戦略に基づいて策定されるため、情報システム全体の最適化目標は情報化投資計画に沿う形で設定されるべきです。  
+
+---
+
+## 共通フレーム
+
+システム開発に関わる(構想、開発、運用、保守、破棄)言葉の違いによる認識のずれを防止するために共通の言葉を定義したガイドライン。  
+開発における共通の物差し。  
+
+### 企画プロセス**  
+
+#### システム化構想の立案
+
+「システム化計画の立案」に先だって実施され、事業環境、現行業務、情報技術動向などを調査した上で、経営要求・経営課題、システム化の検討対象となる業務、業務の新全体像のイメージなどを文書化し、経営者の承認を得ることを目的とするアクティビティです。  
+
+→  
+企業で将来的に必要となる最上位の業務機能と業務組織を表した業務の全体像等  
+
+![a](https://www.ap-siken.com/kakomon/30_haru/img/61.gif)  
+
+### 要件定義プロセス
+
+業務手順やコンピュータ入出力情報など実現すべき要件
+
+### 運用プロセス
+
+日次や月次で行う利用者業務やコンピュータ入出力作業の業務手順
+
+### 開発プロセスのシステム方式設計
+
+必要なハードウェアやソフトウェアを記述した最上位レベルのシステム方式
 
 ---
 
@@ -82,20 +294,45 @@ EAでは「政策・業務体系」「データ体系」「適用処理体系」
 経営資源の集中、業務効率の向上、業務コストの削減などを目的に、業務プロセスを対象としてアウトソーシングを実施することです。  
 企業内部の間接部門で行われていた労務管理、人事、経理、給与計算、データの入出力や処理などのバックオフィス業務の一部や、コールセンターの業務全体などを外部の専門業者に委託するケースがこれに該当します。  
 
-### UML(Unified Modeling Language)
+### BPR(Business Process Reengineering)
 
-オブジェクト指向開発で用いられる標準表記法群で、オブジェクト間の関連や動作・構成を表現する13種の図表から構成されています。  
-UML2.0の13の図法は表現する対象によって構造図，振る舞い図に分類することができます。  
+業務プロセスを抜本的に見直し再設計する手法。  
+BPRを実施する際には、業務プロセス、組織、規定など全ての要素を**ゼロベース**で見直し、十分な検討により設定された**将来のあるべき姿**を実現するためにそれらを最良のものに再構築します。  
 
-#### 構造図
+### BPM(Business Process Management)
 
-システムの静的な構造をモデルで表現する。  
-クラス図，コンポジット構造図，コンポーネント図，配置図，オブジェクト図，パッケージ図  
+BPR(Business Process Reengineering)のように一回限りの革命的な変化でなく、組織が繰り返し行う日々の業務のなかで継続的にビジネスプロセスの発展を目指していくための技術・手法のことです。  
+BPMを迅速かつ安価に実現するためのITシステムをBPMシステムといいます。  
+つまり、**企業の業務プロセスの継続的な改善**。  
 
-#### 振る舞い図
+### RPA(Robotic Process Automation)
 
-システムの振る舞いをモデルで表現する。  
-アクティビティ図，ユースケース図，シーケンス図，インタラクション概念図，コラボレーション図，タイミング図，ステートマシン図  
+これまで人間が行ってきた定型的なパソコン操作を、コンピュータ上で動作するソフトウェアの力で自動化するものです。  
+具体的には、ユーザ・インターフェース上の操作を認識する技術とワークフロー実行を組み合わせ、表計算ソフトやメールソフト、ERP（基幹業務システム）など複数のアプリケーションを使用する一連の業務プロセスをオートメーション化します。  
+主に間接部門の業務を効率化するために使用されます。  
+
+### ワークフローシステム
+
+電子化された申請書や通知書をあらかじめ決められた作業手順(決裁ルート)に従い、集配信し、電子決裁処理を行うシステムです。  
+りん議・報告書・届出申請の承認手続きを電子化することで、手続きのスピード向上、業務効率化、内部統制強化を図ることが可能となります。  
+
+### オンデマンド(On-Demand)
+
+英語で「要求に応じて」という意味で、利用者の求めに応じてサービスの提供をすることをいいます。オンデマンド型のサービスとは、「オンデマンド」の特性を備え、利用者が好きなときに必要な量の情報や機能を受けられるように設計されたサービスを指します。  
+インターネット環境を利用した動画配信やeラーニング、少部数の印刷に対応するオンデマンド印刷などの例があります。  
+Webサイトやブログも必要なときに情報を得られるという意味では、オンデマンド型サービスと言えるでしょう。  
+
+### ホスティングサービス
+
+サービス提供者が自らの施設内で運用している機器の全部または一部を、顧客に有料あるいは無料で貸し出すサービスです。  
+機器を自分で所有する場合と異なり、設置環境の整備、機器のメンテナンス、障害対応、ソフトウェアアップデートなどの維持管理は事業者側の責任で行われるので、利用者側ではこれらの管理コストが掛からないという利点があります。  
+代表的な例としてレンタルサーバが挙げられます。  
+
+### シェアリングエコノミー
+
+物やサービスを所有するのではなく、インターネット上のプラットフォームを介して個人と個人の間で使っていないモノ・場所・技能などを貸し借り・売買することによって、共有していく経済の動きのことです。  
+貸主は遊休資産の活用による収入が得られ、借主は購入や維持にかかわるコストを削減できる利点があります。  
+カーシェアやライドシェア、民泊のマッチングサービス、フリマアプリ、クラウドソーシング、クラウドファンディングなどが代表的な存在です。  
 
 ---
 
@@ -177,187 +414,23 @@ SOAを実現する手段として、WebサービスやESB(Enterprise service bus
 組織の業務システムに蓄積された膨大なデータを分析・加工し、経営や業務に役立つ情報を見つけ出す手法・技術の総称です。  
 データウェアハウスやデータマートに集積された情報を、BIツールが備えるOLAP(Online Analytical Processing)やデータマイニングの機能を用いて分析することで迅速な意思決定を支援します。  
 
----
+### ビッグデータ
 
+典型的なデータベースソフトウェアが把握し、蓄積し、運用し、分析可能なサイズを超えるほど巨大なデータ群を示す言葉です。  
+一般的には数十テラバイトから数ペタバイトのデータがビッグデータとして扱われます。  
+ビッグデータが持つ特性として「3つのV」があります。  
 
-**ITポートフォリオ**  
-情報化投資において，リスクや投資価値の類似性でカテゴリ分けし，最適な資源配分を行う際に用いる手法。
-ポートフォリオの考え方を情報化投資戦略に応用したものです。
-**IT投資をその目的やリスクの特性ごとにカテゴライズし、**そのカテゴリごとに投資割合を管理することで、限りある経営資源を有効に配分することが可能になります。経済産業省が提唱するモデルでは「戦略目標達成型」「業務効率化型」「インフラ構築型」の3つのカテゴリに分類した後、いくつかの評価項目を用いて優先順位を決定します。
+#### Volume … データ容量
 
-**3C分析**  
-マーケティング分析に必要不可欠な3要素、**顧客(Customer)**，**自社(Company)**，**競合他社(Competitor)**について自社の置かれている状況を分析する手法です。
-
-**ベンチマーキング**  
-自社の製品・サービス及びプロセスを定量的・定性的に測定し、それを業界で最も成功を収めている企業(ベスト企業)のものと比較しそのギャップを把握する分析手法です。
-
-
-
-**オンデマンド(On-Demand)**  
-英語で「要求に応じて」という意味で、利用者の求めに応じてサービスの提供をすることをいいます。オンデマンド型のサービスとは、「オンデマンド」の特性を備え、利用者が好きなときに必要な量の情報や機能を受けられるように設計されたサービスを指します。
-インターネット環境を利用した動画配信やeラーニング、少部数の印刷に対応するオンデマンド印刷などの例があります。Webサイトやブログも必要なときに情報を得られるという意味では、オンデマンド型サービスと言えるでしょう。
-
-
-**ビッグデータ**  
-典型的なデータベースソフトウェアが把握し、蓄積し、運用し、分析可能なサイズを超えるほど巨大なデータ群を示す言葉です。一般的には数十テラバイトから数ペタバイトのデータがビッグデータとして扱われます。
-ビッグデータが持つ特性として「3つのV」があります。
-
-**Volume … データ容量**  
 膨大なデータ量
-**Variety … データの多様性**  
+
+#### Variety … データの多様性**  
+
 テキスト、画像、音声といった多様な種類・形式のデータを含む
-**Velocity … データ生成速度・頻度**  
-リアルタイムで収集できるデータ・秒単位など高頻度のデータ
-ビッグデータの処理は、以前は膨大すぎて処理対象から外されていた多種多様なディジタルデータを統計学的・数学的に分析し、事業に役立つ知見を導き出すことを目的とします。
 
+#### Velocity … データ生成速度・頻度**  
 
-
-**BPR(Business Process Reengineering)**  
-業務プロセスを抜本的に見直し再設計する手法。
-BPRを実施する際には、業務プロセス、組織、規定など全ての要素を**ゼロベース**で見直し、
-十分な検討により設定された**将来のあるべき姿**を実現するためにそれらを最良のものに再構築します。
-
-
-**BPM(Business Process Management)**  
-BPR(Business Process Reengineering)のように一回限りの革命的な変化でなく、
-組織が繰り返し行う日々の業務のなかで継続的にビジネスプロセスの発展を目指していくための技術・手法のことです。
-BPMを迅速かつ安価に実現するためのITシステムをBPMシステムといいます。
-つまり、**企業の業務プロセスの継続的な改善**。
-
-
-**BPO(Business Process Outsourcing)**  
-自社の業務の一部を、丸ごと外部の業者に委託することです。
-コスト削減や業務効率化の効果が期待できるだけでなく、その企業本来の事業に集中できるようになるという利点もあります。
-ちなみに、海外業者への外部委託はオフショアアウトソーシングと呼ばれます。
-
-
-
-**ディジタルディバイド**  
-日本語では情報格差と訳され、パソコンやインターネットなどの情報技術(IT)を使いこなせる者と使いこなせない者の間に生じる、待遇や貧富、機会の格差のことです。
-若者や高学歴者、高所得者などが情報技術を活用してますます高収入や雇用を手にする一方、コンピュータを使いこなせない高齢者や貧困のため情報機器を入手できない人々は、より一層困難な状況に追い込まれる。いわば、情報技術が社会的な格差を拡大、固定化する現象です。
-
-
-**ホスティングサービス**  
-サービス提供者が自らの施設内で運用している機器の全部または一部を、顧客に有料あるいは無料で貸し出すサービスです。
-機器を自分で所有する場合と異なり、設置環境の整備、機器のメンテナンス、障害対応、ソフトウェアアップデートなどの維持管理は事業者側の責任で行われるので、
-利用者側ではこれらの管理コストが掛からないという利点があります。代表的な例としてレンタルサーバが挙げられます。
-
-
-**シェアリングエコノミー**  
-物やサービスを所有するのではなく、インターネット上のプラットフォームを介して個人と個人の間で使っていないモノ・場所・技能などを貸し借り・売買することによって、共有していく経済の動きのことです。貸主は遊休資産の活用による収入が得られ、借主は購入や維持にかかわるコストを削減できる利点があります。
-カーシェアやライドシェア、民泊のマッチングサービス、フリマアプリ、クラウドソーシング、クラウドファンディングなどが代表的な存在です。
-
-**ワークフローシステム**  
-電子化された申請書や通知書をあらかじめ決められた作業手順(決裁ルート)に従い、集配信し、電子決裁処理を行うシステムです。
-りん議・報告書・届出申請の承認手続きを電子化することで、手続きのスピード向上、業務効率化、内部統制強化を図ることが可能となります。
-
-
-**RPA(Robotic Process Automation)**  
-これまで人間が行ってきた定型的なパソコン操作を、コンピュータ上で動作するソフトウェアの力で自動化するものです。
-具体的には、ユーザ・インターフェース上の操作を認識する技術とワークフロー実行を組み合わせ、表計算ソフトやメールソフト、ERP（基幹業務システム）など複数のアプリケーションを使用する一連の業務プロセスをオートメーション化します。
-主に間接部門の業務を効率化するために使用されます。
-
-**ROI(Return on Investment，投下資本利益率)**  
-投資額に対してどれだけ経常利益を生み出しているかを見る指標で、
-`ROI＝利益／投資額`
-の式で求められます。
-この値が高いほど稼ぐ力が強いということになります。
-
-問題文中に，割引率は考慮しなくてもよいものとする。
-とあった場合、分子を全部足して投資額で割るだけで良い。
-
-
-
-**IT投資評価**  
-
-**事前評価**  
-実施前の投資案件に対して、内部の了解を得るとともに他のプロジェクトとの整合などの全体最適の観点から評価を行う。
-投資実行の可否を判断するための情報を提供する役割を担う。
-→
-投資目的に基づいた効果目標を設定し，実施可否判断に必要な情報を上位マネジメントに提供する。等
-「効果目標の設定」は計画段階で行う。
-
-**中間評価**  
-実施中の投資案件の実績をモニタリングし評価する。実施計画の軌道修正を判断するための情報を提供する役割を担う。
-→
-事前に設定した効果目標の達成状況を評価し，必要に応じて目標を達成するための改善策を検討する。
-計画と実績との差異及び原因を詳細に分析し，投資額や効果目標の変更が必要かどうかを判断する。等
-
-**事後評価**  
-実施済の投資案件が事前に設計した目的・効果を達成しているかどうかを評価する。IT投資の実施効果を上位マネジメントに報告するとともに、終結以後の改善策について判断するための情報を提供する役割を担う。
-→
-投資効果の実現時期と評価に必要なデータ収集方法を事前に計画し，その時期に合わせて評価を行う。等
-
-
-
-ITサービスをアウトソーシングする際の，システム保守品質・運用品質の低下リスクへの対応策はどれか。
-→
-サービス品質を示す指標を用い，目標とする品質のレベルを委託先と取り決めた上で，サービス品質の改善活動を進めていく。
-→
-SLAを締結することで、目標とするサービス品質が明確になります。さらに未達の場合には補償を受けられるのでリスクヘッジも可能になります。
-
+リアルタイムで収集できるデータ・秒単位など高頻度のデータ。  
+ビッグデータの処理は、以前は膨大すぎて処理対象から外されていた多種多様なディジタルデータを統計学的・数学的に分析し、事業に役立つ知見を導き出すことを目的とします。  
 
 ---
-
-## 全体最適化計画
-
-全体最適化計画とは、組織内の個々のシステムが有機的に関連し、相互の整合性を保ちながら効率的かつ効果的に目的を達成するように、**組織体全体の情報システムをあるべき姿**に改善していくための計画です。
-
-### 情報戦略
-情報化投資の原則や全体最適化の方針・目標を明確にし、経営方針や中長期計画との整合性をもった全体最適化計画を策定するとされています。
-
-"システム管理基準"によれば，情報戦略策定段階の成果物はどれか。
-→
-**経営戦略に基づいて**組織体全体で整合性及び一貫性を確保した情報化を推進するために，方針及び目標に基づいて策定する全体最適化計画
-
-
-**システム管理基準**  
-情報戦略を立案し、効果的な情報システム投資とリスクを低減するためのコントロールを適切に整備・運用するための事項を経済産業省がとりまとめたものです。
-全287項目で構成されていて、それぞれの項目は「情報戦略」「企画業務」「開発業務」「運用業務」「保守業務」「共通業務」の6つの業務別に分類されています。全体最適化は「情報戦略」の小分類に位置づけられています。
-
-**全体最適化**  
-組織体が主体的に経営戦略に沿って効果的な情報システム戦略を立案し、全社的に情報システム開発を推進する体制を整えるために実施される作業で、以下の4つのカテゴリに大別されています。
-
-全体最適化の方針・目標(6項目)
-全体最適化計画の承認(3項目)
-全体最適化計画の策定(7項目)
-全体最適化計画の運用(1項目)
-
-
-"システム管理基準"によれば，"全体最適化"に含まれる作業はどれか。
-
-委託先を含む開発体制の策定
-企画業務で実施する作業です。
-
-開発スケジュールの策定
-企画業務で実施する作業です。
-
-個別システムのハードウェアの導入スケジュールの策定
-開発業務で実施する作業です。
-
-情報システム基盤の整備計画の策定
-正しい。全体最適化で実施する作業です。
-
----
-
-## 共通フレーム
-
-システム開発に関わる(構想、開発、運用、保守、破棄)言葉の違いによる認識のずれを防止するために共通の言葉を定義したガイドライン。
-開発における共通の物差し。
-
-### 企画プロセス**  
-
-**システム化構想の立案**  
-「システム化計画の立案」に先だって実施され、事業環境、現行業務、情報技術動向などを調査した上で、経営要求・経営課題、システム化の検討対象となる業務、業務の新全体像のイメージなどを文書化し、経営者の承認を得ることを目的とするアクティビティです。
-→
-企業で将来的に必要となる最上位の業務機能と業務組織を表した業務の全体像等
-
-### 要件定義プロセス
-業務手順やコンピュータ入出力情報など実現すべき要件
-
-### 運用プロセス
-日次や月次で行う利用者業務やコンピュータ入出力作業の業務手順
-
-### 開発プロセスのシステム方式設計
-必要なハードウェアやソフトウェアを記述した最上位レベルのシステム方式
-
