疑問追加、整理

--- a/C#/非同期系メモ.md
+++ b/C#/非同期系メモ.md
@@ -375,3 +375,14 @@ Task.Factory.StartNewが不要になったわけではない。
         return () => { _ = 1; };
     });
 ```
+
+---
+
+## AsyncをAwaitするのと同期は同じか？
+
+居林さんは毎回いい質問を持ってきてくれる。  
+厳密には違うだろう。  
+
+async await 同期 同じ　c#  
+[[C#]await利用時の同期コンテキストと実行スレッドの動きについてコードを動かして見ていく](https://qiita.com/Kosei-Yoshida/items/7afe6c2f6158f36f50b1)  
+[【C#】ASYNC/AWAITで同期メソッドから非同期メソッドを呼ぶ方法](https://nryblog.work/call-sync-to-async-method/)  
