--- a/Japanese/言葉の意味.md
+++ b/Japanese/言葉の意味.md
@@ -1,10 +1,14 @@
 # 言葉の意味まとめ
 
+---
+
 ## 難儀(なんぎ)  
 
 1 苦しみ悩むこと。苦労すること。また、そのさま。「腰を屈めるのも難儀だ」「雪道を行くのに難儀する」  
 2 面倒なこと。迷惑なこと。また、そのさま。「難儀をかける」「難儀な話をもちこむ」  
 3 処理するのがむずかしいこと。また、そのさま。一大事。  
+
+---
 
 ### 「難儀やなぁ」の意味  
 
@@ -12,15 +16,21 @@
 「難儀」自体には「苦労、困難、面倒」といった意味がある。  
 また、自分自身が厄介な状況に陥った時に、「参ったな」という意味で用いられたり、迷惑をかける人を咎めるために用いられたりすることもある。  
 
+---
+
 ## 瑕疵(かし)  
 
 通常、一般的には備わっているにもかかわらず本来あるべき機能・品質・性能・状態が備わっていないこと。  
 特定の売買契約においてその目的物に何らかの欠陥・不具合があることで、その品質や性能が損なわれている状態を指しています。  
 
+---
+
 ## 勘当(かんどう)  
 
 親が子との縁を切ること。  
 すなわち懲戒の意味で、親が子を家から追放する行為をさすようになった。親族関係も当然断絶されるわけで、その意味で久離(きゅうり)の一種とも考えられる。事実、江戸町奉行(ぶぎょう)所では、久離を欠落(かけおち)久離、勘当を追出(おいだし)久離とよんで区別するようになった。
+
+---
 
 ## 棄却(ききゃく)  
 
@@ -28,6 +38,8 @@
 どちらかというと、専門分野(統計学等)で用いられる言葉みたい。  
 俺はなぜこの言葉を使うのか。  
 プログラミングではあまり使わないはずだ。  
+
+---
 
 ## 煩雑(はんざつ)  
 
@@ -37,10 +49,14 @@
 「やらねばならないことが多くあり、込み入っていること」
 →これが一番しっくり来るかな。  
 
-### 煩わしい(わずらわしい)  
+---
+
+## 煩わしい(わずらわしい)  
 
 「面倒で気が重い。また、入り組んで煩雑だ。」  
 つまり面倒ってことだ。  
+
+---
 
 ## 門外漢(もんがいかん)  
 
@@ -53,12 +69,16 @@
 
 個人的には、そのプロジェクトに関わりがない人のことだと思ってたけど、厳密には違うのな。  
 
+---
+
 ## 張り子の虎
 
 主体性がなく人のいうことにただ頷いている人や、首を動かす癖がある人の事。  
 また、弱いくせに虚勢を貼っている人のたとえ。  
 
 へー。悪い意味だったんだね。知らなかったわ。  
+
+---
 
 ## 背に腹はかえられぬ
 
@@ -68,6 +88,8 @@
 
 コトバンク  
 事態が切迫すると、肝心なものを守るために、相当な犠牲をはらうのもやむをえないことのたとえ。不本意でも、ほかに選択肢がないことを強く示唆する。  
+
+---
 
 ## 約款(やっかん)
 
@@ -82,6 +104,8 @@
 読み方を忘れないために記録しただけなのだが、意味的にはエライややこしい。  
 乙が～甲が～って永遠と繰り返して雲にまくタイプの資料に出てくる奴だ。  
 
+---
+
 ## 小盛の読み方
 
 たぶん「こもり」  
@@ -93,3 +117,9 @@
 >「大吉」「小吉」、「大規模」「小規模」、「大腸」「小腸」のように  
 >「大」を「だい」と読むときは「小」は「しょう」と読むことが多いような気もします。（違う例があったらすみません）  
 >この方式でいくと、「大盛り」は「おおもり」なので「小盛り」は「こもり」になるのではないでしょうか。  
+
+---
+
+## 勇み足(いさみあし)
+
+相撲(すもう)で、相手を土俵ぎわに追い詰めながら勢い余って自分から土俵外に足を出し、負けになること。転じて、勢いに乗って、（不注意な）やりすぎの失敗をすること。  
