--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -336,9 +336,19 @@ IETFによってRFC 7519として標準化されている。
 
 ## POCO(Plain Old CLR Object)
 
-メソッドを持たず、プロパティだけ持つ、データを格納するだけが目的のクラス  
+メソッドを持たず、プロパティだけ持つ、データを格納するだけが目的のクラス。  
+共通言語ランタイム（Common Language Runtime、CLR）のみに依存するプレーンなオブジェクト。  
 
-共通言語ランタイム（Common Language Runtime、CLR）のみに依存するプレーンなオブジェクトである。  
+これに限らずASP.NetCoreを説明しているあれを全てまとめたい勢いだ。  
+
+---
+
+## UIスレッド
+
+ユーザーインターフェイススレッド (英: user-interface thread) とは、アプリケーションソフトウェアのグラフィカルユーザーインターフェイス (GUI) におけるメインスレッドのことを指す。  
+UIスレッドと表記されることもある。  
+本項では、GUIでのマルチスレッドに関するデザインパターンを記載する。  
+ユーザーインターフェイススレッドは、Javaではイベントディスパッチスレッド、Adobe Flashではprimordial workerと呼ばれる。  
 
 ---
 
@@ -380,18 +390,18 @@ ItemsPanel
     </Setter>
 ```
 
-``` xml
-    <Style x:Key="CloseButton" TargetType="Button">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="Button">
-                    <Button Command="{TemplateBinding Command}" Margin="0" Padding="0" VerticalAlignment="Center" Height="22">
-                        <Border Margin="4,0" MaxWidth="14" CornerRadius="1">
-                            <Image Stretch="None" RenderOptions.BitmapScalingMode="Fant" Source="{Binding Source={StaticResource res}, Converter={StaticResource ResourceImageConverter}, Path=Resources.closeerror}" />
-                        </Border>
-                    </Button>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-```
+webアセンブリ
+
+
+今日もよく眠れたでござる。
+足は筋肉痛ではないですが、ちょっと張ってる程度ですね。
+頑張れば今日も行けそう。
+
+
+GROUPBYのサンプルはどう頑張ってもそういうテーブルを作らないと無理だよな。
+たとえできたとしても、分かりやすさ的にそうしたほうがいいと思われる。
+
+
+転職したいけどだるいなぁ。
+もう少し勉強していたいと思っている。
+
