--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -330,7 +330,7 @@ IETFによってRFC 7519として標準化されている。
 
 デシャップとは、レストランなどの飲食店で厨房で出来上がった料理が配膳の前に置かれる場所のことをいいます。  
 「dish up（ディッシュアップ）」という言葉が語源になっており、飲食業界の専門用語として用いられています。  
-また、完成した料理をホールなどに運ぶ仕事をする人のことを指す場合もあります。
+また、完成した料理をホールなどに運ぶ仕事をする人のことを指す場合もあります。  
 
 ---
 
@@ -349,6 +349,26 @@ IETFによってRFC 7519として標準化されている。
 UIスレッドと表記されることもある。  
 本項では、GUIでのマルチスレッドに関するデザインパターンを記載する。  
 ユーザーインターフェイススレッドは、Javaではイベントディスパッチスレッド、Adobe Flashではprimordial workerと呼ばれる。  
+
+---
+
+## WebAssembly
+
+[WebAssemblyとは？〜実際にC言語をブラウザで動かす〜【2019年6月版】](https://qiita.com/umamichi/items/c62d18b7ed81fdba63c2)  
+
+---
+
+## VisualStudioで簡易データベース構築
+
+[Visual Studio でデータベースを作成し、テーブルを追加する](https://docs.microsoft.com/ja-jp/visualstudio/data-tools/create-a-sql-database-by-using-a-designer?view=vs-2022)  
+
+右クリック、新規ファイル追加
+サービスベースのデータベース
+これだけで行ける。
+
+[SQL Server LocalDB へ接続してSQLを実行する](https://www.ipentec.com/document/csharp-sql-server-localdb-connect-exec-sql)  
+
+はやくやりてーーーーー。
 
 ---
 
@@ -390,18 +410,5 @@ ItemsPanel
     </Setter>
 ```
 
-webアセンブリ
-
-
-今日もよく眠れたでござる。
-足は筋肉痛ではないですが、ちょっと張ってる程度ですね。
-頑張れば今日も行けそう。
-
-
-GROUPBYのサンプルはどう頑張ってもそういうテーブルを作らないと無理だよな。
-たとえできたとしても、分かりやすさ的にそうしたほうがいいと思われる。
-
-
-転職したいけどだるいなぁ。
-もう少し勉強していたいと思っている。
-
+https://www.mpuni.co.jp/products/ballpoint_pens/refill_jet.html
+https://www.koekisha.co.jp/chiebukuro/difference02/
